2007-10-31  Kohei Yoshida  <kyoshida@novell.com>

	* workben/addon_pkg/translation/en-US/license.txt:
	* workben/addon_pkg/license.txt: moved from the top location to the
	bottom.

	* source/inc/tool/global.hxx: turned off SCSOLVER_DEBUG flag.
	
	* source/numeric/lpsolve.cxx:
	* source/ui/dialog.cxx:
	* source/ui/solvemodel.cxx:
	* source/ui/xcalc.cxx: surrounded debug statements with 
	'#if SCSOLVER_DEBUG' to make it conditional.
	
	* workben/addon_pkg/description.xml: removed license files from non-
	en-US locales.
	
	* workben/addon_pkg/Makefile.in: package the new license.txt file.

	* workben/addon_pkg/translation/de/license.txt:
	* workben/addon_pkg/translation/en-GB/license.txt:
	* workben/addon_pkg/translation/es/license.txt:
	* workben/addon_pkg/translation/fr/license.txt: removed.

2007-10-31  Kohei Yoshida  <kyoshida@novell.com>

	* source/numeric/matrix.cxx: enable dynamic resize by default to prevent
	crash during LP solving.
	
	* source/numeric/matrix_test.cxx: explicitly disable dynamic resize for
	bad index testing.
	
	* source/ui/lpbuilder.cxx: enclose matrix assignment statements with try
	catch block to prevent crash in case assignment fails.
	
	* workben/addon_pkg/Makefile.in: link in the lpsolve static library for
	real.  This was also causing crash on solving a model.

2007-10-31  Kohei Yoshida  <kyoshida@novell.com>

	* README: added FAQ on how to build scsolver.
	
	* workben/addon_pkg/configure.ac: added check for boost library.
	
	* workben/addon_pkg/translation/de/license.txt:
	* workben/addon_pkg/translation/de/readme.txt:
	* workben/addon_pkg/translation/en-GB/license.txt:
	* workben/addon_pkg/translation/en-GB/readme.txt:
	* workben/addon_pkg/translation/es/license.txt:
	* workben/addon_pkg/translation/es/readme.txt:
	* workben/addon_pkg/translation/fr/license.txt:
	* workben/addon_pkg/translation/fr/readme.txt: added empty contents to
	these files, because apparently the UNO extension manager doens't like 
	0-byte files.
	