@@ -1,3 +1,15 @@
+2007-11-04  Kohei Yoshida  <kyoshida@novell.com>
+
+	* source/inc/basedlg.hxx:
+	* source/ui/basedlg.cxx: added setFocus() method to manually set focus 
+	to the dialog, but this doesn't seem to work and no idea why.  also 
+	added support to retain the dialog position when the dialog gets turned
+	off and on.
+	
+	* source/ui/dialog.cxx: tried to set focus on the constraint dialog 
+	after range selection is done.  But it still sets focus on the main
+	solver dialog.
+
 2007-10-31  Kohei Yoshida  <kyoshida@novell.com>
 
 	* workben/addon_pkg/translation/en-US/license.txt:
